CHANGES for LIRE
================

2014-11-17
==========
  - Bugfix in cluster writing and reading (Nektarios Anagnostopoulos)
  - Architectural re-arrangement of internal methods in BoVW implementation (Nektarios Anagnostopoulos)

2014-11-07
==========
  - Updated to Lucene 4.10.2
  - Added ExtractSingleFeature to simpleapplication.
  - added OpenCV to lib (Nektarios Anagnostopoulos)
  - Fixes to benchmarking and SIMPLE implementation (Nektarios Anagnostopoulos)

2014-08-23
==========
  - Bug fixes from Nektarios Anagnostopoulos on CEDD
  - Fixes on serialization of CEDD and FCTH

2014-08-19
==========
  - Bug fixes from Nektarios Anagnostopoulos on CEDD
  - Changes to SIMPLE and LoCate handling.

2014-08-26
==========
  - Metric Spaces approach implemented and tested.

2014-07-24
==========
  - Changed ID field in ChainedDocumentBuilder to StringField, based on the suggestion of Berthold Daum
  - Added public SimpleImageSearchHits(Collection<SimpleResult> results, float maxDistance, boolean useSimilarityScore)
    based on the suggestion of Berthold Daum
  - Changed SimpleApplication classes to use the generic classes not the factories.

2014-04-16
==========
  - Re-organized UCI Benchmarking
  - Renamed LoDe to SIMPLE

2014-04-16
==========
  - Added and tested LoDe (using global descriptors as local ones)
  - Created and tested a LocalFeatureHistogramBuilder based on the
    Apache Commons Math KMeans++ implementation
  - Fixed several issues with net.semanticmetadata.lire.imageanalysis.bovw.LocalFeatureHistogramBuilder

2014-04-14
==========
  - Updated jopensurf to latest svn / git version.
  - linked sift implementation to math3 package of Apache Math Commons
  - fixed image cropping in ImageUtils. It didn't crop, but scaled
  - added generic method to AbstractDocumentBuilder (arch simplification.)
  - made CEDD work with smaller images (Tnx to Savvas Chatzichristofis)

2014-03-05
==========